Spacing fixes: img.float-right, p strong.top-border

--- a/css/style.css
+++ b/css/style.css
@@ -6456,7 +6456,7 @@ body > nav > div.navbar-header > button {
     padding-bottom: 1em;
     margin-right: 1em; }
   #bs-primary-navbar-collapse-1 > ul > li.dropdown.open > ul > li:nth-child(1) > a {
-    margin-top: .25em; }
+    margin-top: .5em; }
   #bs-primary-navbar-collapse-1 .input-group {
     padding-left: 0; }
   .dropdown-menu > li a {
@@ -6655,7 +6655,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
 .region-content img.float-right {
   float: right;
   width: 50%;
-  margin: 0 1.5em 1em 1.5em; }
+  margin: 0 0 1em 1.5em; }
 
 .region-content img.float-right-small {
   float: right;
@@ -7060,7 +7060,7 @@ ol.breadcrumb {
 
 .paragraph__column p strong.top-border {
   margin-left: 0;
-  margin-bottom: -4em; }
+  margin-bottom: -3em; }
 
 .paragraph__column p.social {
   text-align: center;
